--- a/pages/components/template8/css/Advertisements.module.css
+++ b/pages/components/template8/css/Advertisements.module.css
@@ -1,7 +1,7 @@
 .advertisementSection {
   text-align: center;
-  padding: 40px 20px;
-  background: #f5efff;
+  padding: 40px 20px; 
+  background: #eaebe7;
 }
 
 .heading {
