--- a/pages/components/template8/css/Blogs.module.css
+++ b/pages/components/template8/css/Blogs.module.css
@@ -1,7 +1,7 @@
 .blogsSection {
   position: relative;
   padding: 80px 5%;
-  background: #f5efff;
+  background: #8DB600;
   overflow: hidden;
   transform: translateY(-5px);
 }
