--- a/pages/components/template8/css/HeroBanner.module.css
+++ b/pages/components/template8/css/HeroBanner.module.css
@@ -55,7 +55,7 @@
 }
 
 .ctaButton {
-  background: linear-gradient(135deg, #a294f9, #cdc1ff);
+  background: linear-gradient(135deg, #8DB600, #8DB600);
   color: white;
 }
 
@@ -125,7 +125,7 @@
 
 .submitButton {
   width: 100%;
-  background: linear-gradient(135deg, #a294f9, #cdc1ff);
+  background: linear-gradient(135deg, #8DB600, #8DB600);
   color: white;
   border: none;
   padding: 10px;
@@ -136,5 +136,5 @@
 }
 
 .submitButton:hover {
-  background: linear-gradient(135deg, #cdc1ff, #a294f9);
+  background: linear-gradient(135deg, #8DB600, #8DB600);
 }
