--- a/pages/components/template8/detail-components/HeroBanner/HeroBanner.module.css
+++ b/pages/components/template8/detail-components/HeroBanner/HeroBanner.module.css
@@ -59,7 +59,7 @@
 
 /* CTA Button */
 .ctaButton {
-  background: #ff7e5f;
+  background: #8DB600;
   color: white;
   border: none;
   padding: 12px 24px;
