--- a/pages/components/template8/detail-components/Maharera/Maharera.module.css
+++ b/pages/components/template8/detail-components/Maharera/Maharera.module.css
@@ -21,7 +21,7 @@
   left: -50px;
   width: 100px;
   height: 100px;
-  background: #a294f9;
+  background: #8DB600;
   clip-path: polygon(0 0, 100% 0, 0 100%);
 }
 
@@ -32,7 +32,7 @@
   right: -50px;
   width: 100px;
   height: 100px;
-  background: #f5efff;
+  background: #8DB600;
   clip-path: polygon(100% 100%, 0 100%, 100% 0);
 }
 
@@ -45,14 +45,14 @@
 .heading {
   font-size: 28px;
   font-weight: 600;
-  color: #333;
+  color: #000000;
   position: relative;
   display: inline-block;
   padding-bottom: 8px;
 }
 
 .highlight {
-  color: #a294f9;
+  color: #8DB600;
 }
 
 /* LINK STYLES */
@@ -62,7 +62,7 @@
 }
 
 .link a {
-  color: #a294f9;
+  color: #8DB600;
   text-decoration: none;
   font-weight: bold;
 }
@@ -89,17 +89,17 @@
 .reraTable td {
   padding: 12px 16px;
   text-align: center;
-  border-bottom: 2px solid #e5d9f2;
+  border-bottom: 2px solid #8DB600;
 }
 
 .reraTable th {
-  background: #a294f9;
+  background: #8DB600;
   color: #ffffff;
   text-transform: uppercase;
 }
 
 .reraTable tr:hover {
-  background: #f5efff;
+  background: #f5fff0;
   transition: 0.3s ease-in-out;
 }
 
