--- a/pages/components/template8/detail-components/gallery/Gallery.module.css
+++ b/pages/components/template8/detail-components/gallery/Gallery.module.css
@@ -1,7 +1,7 @@
 /* Gallery Section */
 .gallerySection {
   padding: 50px;
-  background-color: #f5efff;
+  background-color: #def68e;
   text-align: center;
 }
 
