--- a/pages/components/template8/css/FAQ.module.css
+++ b/pages/components/template8/css/FAQ.module.css
@@ -1,7 +1,7 @@
 .faqSection {
   position: relative;
   padding: 80px 5%;
-  background: #f5efff;
+  background: #8DB600;
   overflow: hidden;
 }
 
@@ -12,7 +12,7 @@
   left: 0;
   width: 100%;
   height: 40%;
-  background: linear-gradient(135deg, #a294f9, #cdc1ff);
+  background: linear-gradient(135deg, #000000, #030303);
   clip-path: polygon(0 0, 100% 0, 100% 70%, 0 100%);
   z-index: 0;
 }
