--- a/pages/components/template8/css/Properties.module.css
+++ b/pages/components/template8/css/Properties.module.css
@@ -2,7 +2,7 @@
 .propertiesSection {
   width: 90%;
   padding: 10px 5%;
-  background: linear-gradient(135deg, #f5efff, #c6a6e9);
+  background: linear-gradient(135deg, #edfac0, #8DB600);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -117,7 +117,7 @@
 .viewButton {
   width: 100%;
   padding: 12px;
-  background: linear-gradient(135deg, #a294f9, #5a4fcf);
+  background: linear-gradient(135deg, #8DB600, #000000);
   border: none;
   border-radius: 8px;
   font-size: 1rem;
