--- a/pages/components/template3/css/PropertyDetails.module.css
+++ b/pages/components/template3/css/PropertyDetails.module.css
@@ -100,3 +100,20 @@
   font-size: 1.5rem;
   color: red;
 }
+
+.scrollableDescription {
+  max-height: 300px; /* You can adjust the height */
+  overflow-y: auto;
+  padding-right: 10px;
+  margin-top: 10px;
+}
+
+/* Optional custom scrollbar styling */
+.scrollableDescription::-webkit-scrollbar {
+  width: 6px;
+}
+
+.scrollableDescription::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
