--- a/pages/components/template4/css/HeroBanner.module.css
+++ b/pages/components/template4/css/HeroBanner.module.css
@@ -1,7 +1,7 @@
 .heroBanner {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 100 vh;
   background-size: cover;
   background-position: center;
   display: flex;
@@ -24,6 +24,8 @@
   text-align: center;
   z-index: 2;
   max-width: 800px;
+  margin-top: 150px;
+  margin-bottom: 150px;
 }
 
 .heading {
