--- a/pages/components/template8/detail-components/property-details/PropertyDetails.module.css
+++ b/pages/components/template8/detail-components/property-details/PropertyDetails.module.css
@@ -231,3 +231,31 @@
     font-size: 0.9rem;
   }
 }
+
+
+.tabHeaders {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1rem;
+  border-bottom: 2px solid #ccc;
+}
+
+.tabButton {
+  background: none;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  font-weight: 600;
+  color: #444;
+  border-bottom: 3px solid transparent;
+  transition: all 0.3s ease;
+}
+
+.tabButton:hover {
+  color: #000;
+}
+
+.activeTab {
+  color: #000;
+  border-bottom: 3px solid #00017a;
+}
