--- a/pages/components/template6/css/PropertyDetails.module.css
+++ b/pages/components/template6/css/PropertyDetails.module.css
@@ -41,7 +41,7 @@
   transform: translateX(-50%);
   width: 60px;
   height: 4px;
-  background-color: #ffcc00; /* Accent Color */
+  background-color: #e63946; /* Accent Color */
   border-radius: 10px;
 }
 
@@ -80,7 +80,7 @@
   margin-top: 20px;
   position: relative;
   overflow: hidden;
-  border-left: 4px solid #ffcc00; /* Accent Line */
+  border-left: 4px solid #e63946; /* Accent Line */
 }
 
 .descriptionCard::before {
@@ -90,7 +90,7 @@
   left: 0;
   width: 100%;
   height: 5px;
-  background: linear-gradient(90deg, #ffcc00, #ffd966); /* Gradient Bar */
+  background: linear-gradient(90deg, #e63946, #b97177); /* Gradient Bar */
 }
 
 .sectionHeading {
@@ -130,7 +130,7 @@
   display: inline-block;
   margin: 20px auto 0;
   padding: 12px 25px;
-  background-color: #ffcc00;
+  background-color: #e63946;
   color: #fff;
   font-weight: bold;
   font-size: 1rem;
@@ -142,7 +142,7 @@
 }
 
 .readMoreButton:hover {
-  background-color: #ffd84d;
+  background-color: #e63946;
   transform: translateY(-3px);
 }
 
