--- a/pages/components/template8/css/PropertyDetails.module.css
+++ b/pages/components/template8/css/PropertyDetails.module.css
@@ -33,6 +33,7 @@
   position: relative;
 }
 
+
 .headerCard::after {
   content: '';
   position: absolute;
@@ -41,7 +42,7 @@
   transform: translateX(-50%);
   width: 60px;
   height: 4px;
-  background-color: #ffcc00; /* Accent Color */
+  background-color: #8DB600; /* Accent Color */
   border-radius: 10px;
 }
 
@@ -80,7 +81,7 @@
   margin-top: 20px;
   position: relative;
   overflow: hidden;
-  border-left: 4px solid #ffcc00; /* Accent Line */
+  border-left: 4px solid #8DB600; /* Accent Line */
 }
 
 .descriptionCard::before {
@@ -90,7 +91,7 @@
   left: 0;
   width: 100%;
   height: 5px;
-  background: linear-gradient(90deg, #ffcc00, #ffd966); /* Gradient Bar */
+  background: linear-gradient(90deg, #8DB600, #8DB600); /* Gradient Bar */
 }
 
 .sectionHeading {
@@ -130,7 +131,7 @@
   display: inline-block;
   margin: 20px auto 0;
   padding: 12px 25px;
-  background-color: #ffcc00;
+  background-color: #8DB600;
   color: #fff;
   font-weight: bold;
   font-size: 1rem;
@@ -142,7 +143,7 @@
 }
 
 .readMoreButton:hover {
-  background-color: #ffd84d;
+  background-color: #8DB600;
   transform: translateY(-3px);
 }
 
